--- a/C Programming/Lecture 1/1.1.1
+++ b/C Programming/Lecture 1/1.1.1
@@ -1,1 +1,5 @@
+// what is a computer programming language?
 
+Answer: B
+
+The sequence of instructions (int the form of source code)written in a computer programming language is called a computer programming.
