--- a/C Programming/Lecture 1/1.1.2
+++ b/C Programming/Lecture 1/1.1.2
@@ -1,1 +1,6 @@
+// The genesis of C
 
+Answer: B , C
+
+c is a middle-level language. 
+in a C Program, user can write code to perfume low- level operations.
