--- a/C Programming/Lecture 1/1.1.5
+++ b/C Programming/Lecture 1/1.1.5
@@ -1,1 +1,6 @@
+// 1.1.5 Understanding the structure of a simple C program.
 
+Ans: A , D
+
+#include is a preprocessor command.
+Printf("CodeTantra"); statement, Prints codeTantra on the console.
